<resources>
    <string name="app_name" translatable="false">Eco City</string>
    <string name="twitter_consumer_key"
        translatable="false">WVdst82QUVxUjfn66YzfD9ql7
    </string>
    <string name="twitter_consumer_secret"
        translatable="false">fT3PEEqcSRkkGu6Gh5mU75WOMKxjpIdk5LbwhQwHTOTcUy8xDU
    </string>
    <!--aW41RVNNVnZObVFSOWRla3UzbGQ6MTpjaQ
    t_VgrmrqMPVnx9awE5fyr-QocifyPv-Ne9P1utuFWM-fxERw5P-->
    <string name="welcome" translatable="true">
         Bienvenido/a
    </string>
    <string name="main" translatable="true">
        Ciudades mejores, futuro sostenible
    </string>
    <string name="mainboton" translatable="true">
        Empezar
    </string>
    <string name="lista" translatable="true">
        Lista
    </string>
    <string name="mapa" translatable="true">
        Mapa
    </string>
    <string name="farola" translatable="true">
        Farola
    </string>
    <string name="pref" translatable="true">
        Preferencias
    </string>
    <string name="acerca_de" translatable="true">
        En EcoCity, nos dedicamos a la transformación de ciudades para hacerlas más inteligentes, sostenibles y conectadas. Somos una empresa pionera en soluciones tecnológicas que buscan mejorar la calidad de vida urbana y crear entornos más eficientes y habitables para todos.
    </string>
    <string name="Nombre" translatable="true">
        Nombre:
    </string>
    <string name="Correo" translatable="true">
        Correo electrónico:
    </string>
    <string name="Nombreusu" translatable="true">
        Nombre usuario:
    </string>
    <string name="phone" translatable="true">
        Teléfono móvil:
    </string>
    <string name="password" translatable="true">
        Contraseña:
    </string>
    <string name="direccion" translatable="true">
        Direccción personal:
    </string>
    <string name="acepto" translatable="true">
        Acepto la Política de Privacidad de EcoCity
    </string>
    <string name="cerrarses" translatable="true">
        Cerrar sesión
    </string>
    <string name="guardar" translatable="true">
        Guardar cambios
    </string>
    <string name="iniciarses" translatable="true">
        Inicia sesion:
    </string>
    <string name="iniciarsesion" translatable="true">
        Inicia sesion
    </string>
    <string name="bienvenido" translatable="true">
        Bienvenido de nuevo
    </string>
    <string name="inicpara" translatable="true">
        Inicia sesión para continuar
    </string>
    <string name="nocuenta" translatable="true">
        No tienes cuenta?
    </string>
    <string name="registro" translatable="true">
        Registrarte
    </string>
    <string name="olvidaste" translatable="true">
        Olvidaste tu contraseña?
    </string>
    <string name="localiz" translatable="true">
        Necesitamos acceder a tu ubicación para proporcionarte información personalizada. ¿Deseas permitir el acceso a tu ubicación?
    </string>
    <string name="si" translatable="true">
        Sí
    </string>
    <string name="no" translatable="true">
        No
    </string>
    <string name="anonimtrue" translatable="true">
        Autenticación anónima exitosa
    </string>
    <string name="anonimfalse" translatable="true">
        Autenticación anónima fallida
    </string>
    <string name="cancelado" translatable="true">
        Cancelado
    </string>
    <string name="nointernet" translatable="true">
        Sin conexión a Internet
    </string>
    <string name="errorprov" translatable="true">
        Error en proveedor
    </string>
    <string name="errordesarroll" translatable="true">
        Error desarrollador
    </string>
    <string name="otros_errores" translatable="true">
        Otros errores de autentificación
    </string>
    <string name="loginerr1" translatable="true">
        Introduce un correo
    </string>
    <string name="loginerr2" translatable="true">
        Correo no válido
    </string>
    <string name="loginerr3" translatable="true">
        Introduce una contraseña
    </string>
    <string name="loginerr4" translatable="true">
        Ha de contener al menos 6 caracteres
    </string>
    <string name="loginerr5" translatable="true">
        Ha de contener un número
    </string>
    <string name="loginerr6" translatable="true">
        Ha de contener una letra mayúscula
    </string>
    <string name="recontr" translatable="true">
        Reestablecer contraseña
    </string>
    <string name="recontr1"  translatable="true">
        Introduzca una direccion de correo para reestablecer su contraseña
    </string>
    <string name="recontr2"  translatable="true">
        Enviando correo de restablecimiento de contraseña…
    </string>
    <string name="recontr3"  translatable="true">
        Se ha enviado un correo de restablecimiento de contraseña a su dirección de correo.
    </string>
    <string name="recontr4"  translatable="true">
        No se pudo enviar el correo de restablecimiento de contraseña. Verifique la dirección de correo.
    </string>
    //Cambios añadidos
    <string name="distancia_km">Km</string>
    <string name="distancia_m">m</string>
</resources>